src/test/resources/failing/fail89.pnd
P(1,2)
Q(3,4)

@type Shape
@Constructor Foo[x] = y : int, Shape
@inline Foo[x] = y new Shape <- P(x, z), Q(z, y), a = x + 1, y > a